# CPP3_BrickGame_v2.0

src/: CMakeLists.txt  Makefile  snake.cpp  snake.h  structures.h  tetris.cpp  tetris.h
src/brick_game/snake/: controller.cpp  controller.h  model.cpp  model.h
src/brick_game/tetris/: backend.c  backend.h  helper.c
src/brick_game/tetris/tests/: check.c
src/gui/cli/: cview.c  cview.h
src/gui/desktop/: game.cpp  game.h  mainwindow.h
src/tests/: check.cpp
